# SATDIssueClassification

./: LICENSE  README.md  pyproject.toml
script/: CreateDataset.py  EvaluateSingleProjectModel.py  single.bat
script/.ipynb_checkpoints/: CreateDataset-checkpoint.py
script/_CreateDataset/: Preprocessing.py  SelectFeature.py  Vectorize.py
script/_CreateDataset/.ipynb_checkpoints/: SelectFeature-checkpoint.py
script/_EvaluateModel/: ClassificationModel.py  ComplementNan.py  DataLoader.py  DataProcessing.py  ReduceMemory.py
script/_common/: CommonFunctions.py
